<resources>
    <string name="app_name">PlayM8</string>

    <string name="next">Next</string>

    <string name="onboarding_welcome_title">Team Up, Game On</string>
    <string name="onboarding_welcome_desc">Whether you\'re a hardcore gamer or just looking for someone to play with, our app connects you with like-minded players.</string>

    <string name="login_user">Login</string>
    <string name="register_user">Register</string>
    <string name="login_user_text">Already have an account? Sign in!</string>
    <string name="register_user_text">Don\'t you have an account? Register!</string>

    <string name="dashboardTitile">Dashboard</string>
    <string name="dashboardHeaderText">Hi, %1$s! Ready to play?</string>

    <string name="appVersion">v%1$s</string>

    <string name="drawerSettings">Settings</string>
    <string name="accoutDetails">Account details</string>
    <string name="accountUser">User:</string>
    <string name="accountVersion">Version:</string>
    <string name="accountEmail">Email:</string>
    <string name="bottom_label_home">Dashboard</string>
    <string name="bottom_label_messenger">Messenger</string>
    <string name="bottom_label_news">News</string>
    <string name="logOut">Log out</string>

    <string name="password_error_length">The password must be at least 8 characters long</string>
    <string name="password_error_lowercase">The password must contain at least one lowercase letter</string>
    <string name="password_error_uppercase">The password must contain at least one capital letter</string>
    <string name="password_error_digit">The password must contain at least one digit</string>
    <string name="drawerFriends">Friends</string>
    <string name="drawerNotifications">Notifications</string>
    <string name="drawerProfile">Profile</string>
    <string name="drawerHeaderMain">Main</string>
    <string name="drawerHeaderOther">Other</string>
    <string name="empty_friends_list">You don’t have friends… It’s so sad, dude :(</string>
    <string name="drawerDashboard">Dashboard</string>
    <string name="empty_notifications_list">You don\'t have any notifications</string>
    <string name="accountFirebaseUID">Firebabse UID:</string>


</resources>